--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,8 @@ requires-python = "==3.13.*"
 dependencies = []
 
 [project.optional-dependencies]
-vision = ["opencv-python", "torch"]
+vision = ["opencv-python", "torch", "jax[cuda13]"]
 visionrt-linux = ["visionrt @ git+https://github.com/abiel-almonte/visionrt.git"]
-cupy-cu12 = ["cupy-cuda12x"]
-cupy-cu13 = ["cupy-cuda13x"]
 
 [dependency-groups]
 dev = [
